(tests
 (names
  symbol_index_test
  ohlcv_panels_test
  ema_kernel_test
  panel_snapshot_test
  sma_kernel_test
  atr_kernel_test
  rsi_kernel_test
  indicator_panels_test
  get_indicator_adapter_test
  calendar_aware_load_test)
 (libraries
  bigarray
  ounit2
  core
  core_unix
  core_unix.filename_unix
  core_unix.sys_unix
  csv
  fpath
  matchers
  status
  trading.data_panel
  trading.strategy
  types))
