(test
 (name test_types)
 (libraries ounit2 trading.engine trading.base matchers))

(test
 (name test_engine)
 (libraries
  ounit2
  core
  trading.engine
  trading.base
  trading.orders
  matchers
  core_unix.time_ns_unix)
 (preprocess
  (pps ppx_test_matcher)))

(test
 (name test_price_path)
 (libraries ounit2 core trading.engine trading.base matchers))

(test
 (name test_price_path_buffer_reuse)
 (libraries ounit2 core trading.engine trading.base matchers))
