(test
 (name test_portfolio)
 (libraries ounit2 trading.portfolio trading.orders trading.base matchers))

(test
 (name test_calculations)
 (libraries ounit2 trading.portfolio trading.base matchers))

(test
 (name test_split_event)
 (libraries ounit2 trading.portfolio trading.base matchers)
 (preprocess
  (pps ppx_test_matcher)))

(test
 (name test_short_margin_tiers)
 (libraries core ounit2 trading.portfolio matchers))

(test
 (name test_margin_accounting)
 (libraries
  core
  core_unix.time_ns_unix
  ounit2
  trading.portfolio
  trading.base
  status
  matchers))
