(library
 (public_name trading.simulation)
 (name trading_simulation)
 (libraries
  trading.simulation.types
  trading.simulation.data
  trading.base
  trading.portfolio
  trading.engine
  trading.orders
  trading.strategy
  core)
 (modules
  simulator
  order_generator
  metrics
  metric_computers
  metric_computer_utils
  summary_computer
  sharpe_computer
  drawdown_computer
  cagr_computer
  portfolio_state_computer
  trade_aggregates_computer
  return_basics_computer)
 (preprocess
  (pps ppx_let ppx_deriving.show ppx_deriving.eq)))
