(library
 (public_name trading.simulation)
 (name trading_simulation)
 (libraries
  trading.simulation.types
  trading.simulation.data
  trading.base
  trading.portfolio
  trading.engine
  trading.orders
  trading.strategy
  core)
 (modules
  simulator
  fill_router
  simulator_metrics
  fill_date_stamp
  split_handler
  cancel_handler
  order_generator
  metrics
  metric_computers
  metric_computer_utils
  summary_computer
  sharpe_computer
  drawdown_computer
  cagr_computer
  portfolio_state_computer
  trade_aggregates_computer
  return_basics_computer
  risk_adjusted_computer
  drawdown_analytics_computer
  distributional_computer
  antifragility_computer
  benchmark_relative_computer
  stability_turnover_computer
  capital_relative_drawdown_computer
  portfolio_valuation
  stale_hold
  stale_exit_runner
  margin_runner
  long_maintenance)
 (preprocess
  (pps ppx_let ppx_deriving.show ppx_deriving.eq ppx_sexp_conv)))
