(test
 (name test_simulator)
 (libraries
  ounit2
  core
  trading.simulation
  trading.base
  trading.engine
  types
  matchers))

(test
 (name test_time_series)
 (libraries ounit2 core trading.simulation types matchers))

(test
 (name test_price_cache)
 (libraries ounit2 core trading.simulation types matchers bos csv fpath))

(test
 (name test_indicator_computer)
 (libraries ounit2 core trading.simulation types matchers indicators.types))
