(library
 (name simulation_test_helpers)
 (modules test_helpers)
 (wrapped false)
 (libraries core trading.simulation trading.strategy types bos csv fpath))

(test
 (name test_simulator)
 (modules test_simulator)
 (libraries
  ounit2
  core
  trading.simulation
  trading.base
  trading.engine
  trading.strategy
  types
  matchers
  simulation_test_helpers))

(test
 (name test_time_series)
 (modules test_time_series)
 (libraries ounit2 core trading.simulation types matchers))

(test
 (name test_price_cache)
 (modules test_price_cache)
 (libraries ounit2 core trading.simulation types matchers bos csv fpath))

(test
 (name test_indicator_computer)
 (modules test_indicator_computer)
 (libraries ounit2 core trading.simulation types matchers indicators.types))

(test
 (name test_indicator_manager)
 (modules test_indicator_manager)
 (libraries
  ounit2
  core
  trading.simulation
  types
  matchers
  simulation_test_helpers))

(test
 (name test_market_data_adapter)
 (modules test_market_data_adapter)
 (libraries ounit2 core trading.simulation types matchers bos csv fpath))

(test
 (name test_order_generator)
 (modules test_order_generator)
 (libraries
  ounit2
  core
  trading.simulation
  trading.orders
  trading.base
  trading.strategy
  matchers))
