(lang dune 3.14)

(name csv_storage)
(version 0.1.0)

(package
 (name csv_storage)
 (synopsis "CSV storage module for trading data")
 (description "A module for reading and writing trading data in CSV format")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.14.0))
  (ounit2 :with-test)
  (ppx_deriving (>= 5.2.1))))
