(library
 (name universe)
 (public_name universe)
 (modules
  snapshot
  build_from_index
  build_from_individuals
  build_eligible_universe
  staleness
  composition_inputs
  composition_bar_reader
  composition_policy_types
  dual_class
  composition_policy
  composition_policy_report
  cross_validation)
 (libraries core eodhd kenneth_french shiller status synthetic)
 (preprocess
  (pps ppx_let ppx_deriving.show ppx_deriving.eq ppx_sexp_conv)))
