(tests
 (names
  test_snapshot
  test_build_from_index
  test_build_from_individuals
  test_build_synthetic_universes_runner
  test_build_composition_universes_runner)
 (libraries
  build_composition_universes_runner_lib
  build_synthetic_universes_runner_lib
  core
  kenneth_french
  matchers
  ounit2
  shiller
  status
  universe))
