(tests
 (names test_live_source test_historical_source test_sector_map)
 (libraries
  data_source
  core
  async
  async_unix
  ounit2
  types
  weinstein.types
  csv
  file.sexp
  core_unix
  matchers)
 (preprocess
  (pps ppx_sexp_conv)))

(test
 (name test_synthetic_source)
 (libraries weinstein_data_source_testing core async ounit2 types matchers))
