(tests
 (names test_macro)
 (modules test_macro)
 (libraries macro weinstein_types stage types core ounit2 matchers))

(test
 (name test_macro_e2e)
 (modules test_macro_e2e)
 (libraries
  macro
  weinstein_types
  stage
  weinstein.data_source
  indicators.time_period
  types
  status
  core
  async
  ounit2
  matchers))
