(library
 (name snapshot_pipeline)
 (public_name weinstein.snapshot_pipeline)
 (libraries
  core
  status
  types
  weinstein_types
  trading.data_panel.snapshot
  stage
  rs
  macro
  indicators.time_period)
 (preprocess
  (pps ppx_compare ppx_deriving.eq ppx_deriving.show ppx_let ppx_sexp_conv)))
