(tests
 (names
  test_snapshot_pipeline
  test_snapshot_manifest
  test_snapshot_verifier
  test_resistance_sketch)
 (libraries
  core
  core_unix
  core_unix.filename_unix
  matchers
  ounit2
  status
  trading.data_panel.snapshot
  weinstein.snapshot_pipeline
  weinstein.resistance
  weinstein_types
  types)
 (preprocess
  (pps ppx_sexp_conv)))
