(tests
 (names
  test_snapshot_pipeline
  test_snapshot_manifest
  test_snapshot_verifier
  test_resistance_sketch
  test_weekly_sidetable_builder)
 (libraries
  core
  core_unix
  core_unix.filename_unix
  matchers
  ounit2
  status
  trading.data_panel.snapshot
  weinstein.snapshot_pipeline
  weinstein.resistance
  weinstein_types
  types
  indicators.time_period)
 (preprocess
  (pps ppx_sexp_conv)))
